--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,6 +2,7 @@ name: Deploy Documentation
 
 on:
   push:
+    branches: [ main ]
     paths:
       - 'docs/**'
       - '.github/workflows/deploy-docs.yml'
@@ -17,15 +18,13 @@ concurrency:
 permissions:
   contents: write
   pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
         UV_CACHE_DIR: /tmp/.uv-cache
-    defaults:
-      run:
-        working-directory: docs
 
     steps:
       - name: Checkout repository
@@ -52,9 +51,20 @@ jobs:
         run: uv sync --locked --all-extras
 
       - name: Build documentation
-        run: mkdocs build --strict --verbose
+        run: uv run mkdocs build --strict --clean --verbose
       
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Upload static files as artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: site
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
