--- a/projects/01-image-classification/docker-compose.yaml
+++ b/projects/01-image-classification/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     container_name: triton-inference-server
     command: tritonserver --model-repository=/models --disable-auto-complete-config
     ports:
-      - "8001:8001"  # HTTP
-      - "8002:8002"  # GRPC
+      - "8000:8000"  # HTTP
+      - "8001:8001"  # gRPC
     volumes:
       - ./model:/models
     environment:
@@ -31,10 +31,10 @@ services:
     build: .
     container_name: api
     ports:
-      - "8000:8000"
+      - "8080:8080"
     environment:
       - TRITON_HOST=triton
-      - TRITON_HTTP_PORT=8001
+      - TRITON_HTTP_PORT=8000
       - LOG_LEVEL=info
       - MAX_IMAGE_SIZE=10485760
       # - ALLOWED_EXTENSIONS=jpg,jpeg,png,webp
@@ -42,7 +42,7 @@ services:
       triton:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
