--- a/projects/01-image-classification/pyproject.toml
+++ b/projects/01-image-classification/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "pydantic>=2.12.0",
     "pydantic-settings>=2.11.0",
     "python-multipart>=0.0.20",
-    "tritonclient[http]>=2.60.0",
+    "tritonclient[grpc]>=2.60.0",
     "uvicorn>=0.37.0",
 ]
 
