fix: docker compose for ollama and healthcheck

--- a/projects/02-streaming-llm-chat/Dockerfile
+++ b/projects/02-streaming-llm-chat/Dockerfile
@@ -7,6 +7,7 @@ ENV UV_PYTHON_DOWNLOADS=0
 
 WORKDIR /app
 RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     uv sync --locked --no-install-project --no-dev
 
@@ -32,7 +33,7 @@ WORKDIR /app
 
 EXPOSE 8080
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
+HEALTHCHECK --interval=10s --timeout=3s --start-period=10s --retries=3 \
+    CMD python -c "import sys, urllib.request; r=urllib.request.urlopen('http://localhost:8080/health'); sys.exit(0 if r.status==200 else 1)"
 
 ENTRYPOINT ["start"]
