--- a/projects/01-image-classification/Dockerfile
+++ b/projects/01-image-classification/Dockerfile
@@ -33,7 +33,7 @@ WORKDIR /app
 
 EXPOSE 8080
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
+HEALTHCHECK --interval=10s --timeout=3s --start-period=10s --retries=3 \
+    CMD python -c "import sys, urllib.request; r=urllib.request.urlopen('http://localhost:8080/health'); sys.exit(0 if r.status==200 else 1)"
 
 ENTRYPOINT ["start"]
