--- a/projects/02-streaming-llm-chat/.env.ollama
+++ b/projects/02-streaming-llm-chat/.env.ollama
@@ -3,8 +3,9 @@ LOG_LEVEL=info
 API_PORT=8080
 
 # === Ollama Service Settings ===
-LLM_BASE_URL=http://ollama:11434/v1
+LLM_URL=http://ollama:11434/v1
 LLM_MODEL=tinyllama:1.1b
+LLM_API_KEY=dummy
 
 # === Redis Service Settings ===
 REDIS_URL=redis://redis:6379
