--- a/projects/02-streaming-llm-chat/.env.vllm
+++ b/projects/02-streaming-llm-chat/.env.vllm
@@ -3,8 +3,9 @@ LOG_LEVEL=info
 API_PORT=8080
 
 # === vLLM Service Settings ===
-LLM_BASE_URL=http://vllm:8000/v1
+LLM_URL=http://vllm:8000/v1
 LLM_MODEL=facebook/opt-125m
+LLM_API_KEY=dummy
 
 # === Redis Service Settings ===
 REDIS_URL=redis://redis:6379
